@@ -3,6 +3,8 @@ package com.example.springboot.service;
 import com.example.springboot.dao.MainCategoryDAO;
 import com.example.springboot.dao.MemberDAO;
 import com.example.springboot.dao.PostDAO;
+import com.example.springboot.dto.PostDTO;
+import com.example.springboot.dto.PostDetailsDTO;
 import com.example.springboot.dto.PostRequestDTO;
 import com.example.springboot.dto.PostResponseDTO;
 import com.example.springboot.entity.domain.MainCategoryEntity;
@@ -11,6 +13,7 @@ import com.example.springboot.entity.domain.PostEntity;
 import com.example.springboot.exception.FailGetMainCategoryException;
 import com.example.springboot.exception.FailGetMemberException;
 import com.example.springboot.exception.PostNotFoundException;
+import com.example.springboot.util.CommonCodeEnum;
 import com.example.springboot.util.ExceptionCodeEnum;
 import com.example.springboot.util.ResultCodeEnum;
 import lombok.RequiredArgsConstructor;
@@ -19,7 +22,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -110,25 +112,30 @@ public class PostServiceImpl implements PostService {
      * <p>
      * 게시글리스트를 조회하는 메소드이다.
      *
+     * @param mainCategoryId
      * @return
      */
     @Override
-    public List<PostResponseDTO> findAll() {
-        return postDAO.findAll().stream()
-                .map(postEntity -> PostResponseDTO.builder()
-                        .postId(postEntity.getPostId())
-                        .memberId(postEntity.getMemberId())
-                        .mainCategoryId(postEntity.getMainCategoryId())
-                        .title(postEntity.getTitle())
-                        .content(postEntity.getContent())
-                        .viewCount(postEntity.getViewCount())
-                        .likeCount(postEntity.getLikeCount())
-                        .createdAt(postEntity.getCreatedAt())
-                        .updatedAt(postEntity.getUpdatedAt())
-                        .resultCode(ResultCodeEnum.SUCCESS.getValue())
-                        .resultMessage(ResultCodeEnum.SUCCESS.getMessage())
-                        .build())
-                .collect(Collectors.toList());
+    public PostDTO findAll(Long mainCategoryId) {
+        // 게시글리스트 조회
+        List<PostDetailsDTO> postDetailsDTOList = postDAO.findAllByMainCategoryId(mainCategoryId, CommonCodeEnum.NORMAL.getValue()).stream().map(
+                        postDetailsDTO -> PostDetailsDTO.builder()
+                                .postId((Long) postDetailsDTO[0])
+                                .title((String) postDetailsDTO[1])
+                                .content((String) postDetailsDTO[2])
+                                .likeCount((Long) postDetailsDTO[3])
+                                .commentCount((Long) postDetailsDTO[4])
+                                .createdAt((String) postDetailsDTO[5]).build())
+                .toList();
+
+        if (postDetailsDTOList.isEmpty()) {
+            throw new PostNotFoundException(ExceptionCodeEnum.NONEXISTENT_POST);
+        }
+
+        return PostDTO.builder()
+                .postDetailsDTOList(postDetailsDTOList)
+                .resultCode(ResultCodeEnum.SUCCESS.getValue())
+                .resultMessage(ResultCodeEnum.SUCCESS.getMessage()).build();
     }
 
     /**
